<resources>

    <string name="app_name">SampleFrameApk</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="input_account">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="savePwd">记住密码</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="bubble">弹窗</string>
    <string name="toolbox">工具箱</string>
    <string name="DownloadManagerPro.java">DownloadManagerPro.java</string>
    <string name="download_notification_title">download_notification_title</string>
    <string name="app_status_download_fail">下载失败，点击重新下载</string>
    <string name="app_status_downloaded">下载成功，点击重新下载</string>
    <string name="app_status_download">点击下载</string>
    <string name="tip_download_file">文件保存在SD卡中，路径为：</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
	<string name="drop_down_list_header_pull_text">下拉可以刷新</string>
	<string name="drop_down_list_header_release_text">松开可以刷新</string>
	<string name="drop_down_list_header_loading_text">加载中…</string>
	<string name="drop_down_list_footer_default_text">更多</string>
	<string name="drop_down_list_footer_loading_text">加载中…</string>
	<string name="drop_down_list_footer_no_more_text">没有更多了</string>  
    <string name="image_content">Image</string>
    <string name="scrolltorefresh">下拉刷新或滚动到底部加载更多</string>
    <string name="update_at">更新于：</string>
    <string name="tip_nonetwork">&quot;当前没有网络,请检查网络再试...&quot;</string>
    <string name="loading_fail">加载失败</string>
    
    

</resources>
