<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView 
        android:id="@+id/img_logo"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginTop="20.0dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:background="@drawable/logo_img"/>    
    
    <TableLayout 
        android:id="@+id/table_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp" 
        android:paddingRight="10dp">
        <TableRow 
            android:id="@+id/layout_account"
            android:gravity="center_vertical"         
            android:background="@drawable/login_input_top">
            <TextView 
                android:id="@+id/tv_account"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/account"
                style="@style/TextStyle1"/>
            <EditText 
                android:id="@+id/input_account"
                android:layout_width="0.0dp"                
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="5.0dp"
                android:hint="@string/input_account"
                android:layout_weight="1.0"
                />
        </TableRow>
        <TableRow 
            android:id="@+id/layout_pwd"
            android:gravity="center_vertical"         
            android:background="@drawable/login_input_under">
            <TextView 
                android:id="@+id/tv_pwd"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/password"
                style="@style/TextStyle1"/>
            <EditText 
                android:id="@+id/input_pwd"
                android:layout_width="0.0dp"                
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="5.0dp"
                android:hint="@string/input_pwd"
                android:layout_weight="1.0"
                />
        </TableRow>        
    </TableLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10.0dp"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savePwd"
            android:textSize="10.0sp"
            android:textColor="@color/black"
            />
        <CheckBox 
            android:id="@+id/cb_savePwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>        
    </LinearLayout>
    <Button 
        android:id="@+id/bt_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dp"
        android:background="@drawable/login_bg_selector"
        android:text="@string/login" 
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="loginEvent"
        />
    

</LinearLayout>
