<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/global_top_background">
       <Button 
           android:id="@+id/bt_left"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/TopButtonStyle"
           android:text="@string/toolbox"
           android:layout_marginLeft="5.0dp"
           android:onClick="leftButtonClicked"           
           />
       <TextView 
           android:id="@+id/bar_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/TextStyle2"
           android:layout_centerInParent="true"
           android:text="@string/app_name"/>
       <Button 
           android:id="@+id/bt_right"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/TopButtonStyle"
           android:text="@string/bubble"
           android:layout_marginRight="5.0dp"
           android:layout_alignParentRight="true"
           android:onClick="rightButtonClicked"           
           />
       </RelativeLayout>
      <TabHost 
          android:id="@android:id/tabhost"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          >
          <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              >
              <FrameLayout 
                  android:id="@android:id/tabcontent"
                  android:layout_height="0dp"
                  android:layout_width="fill_parent"                  
                  android:layout_weight="1.0"
                  ></FrameLayout>
              <TabWidget 
                  android:id="@android:id/tabs"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:visibility="gone"></TabWidget>
              <RadioGroup 
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="bottom"
                  android:orientation="horizontal">
                  <RadioButton 
                      android:id="@+id/tab_one"
                      android:layout_width="0.0dp"
                      android:layout_height="wrap_content"
                      android:button="@null"
                      android:background="@drawable/tab_one_selector"
                      android:layout_weight="1.0"
                      />
                  <RadioButton 
                      android:id="@+id/tab_two"
                      android:layout_width="0.0dp"
                      android:layout_height="wrap_content"
                      android:button="@null"
                      android:background="@drawable/tab_two_selector"
                      android:layout_weight="1.0"
                      />
                  <RadioButton 
                      android:id="@+id/tab_three"
                      android:layout_width="0.0dp"
                      android:layout_height="wrap_content"
                      android:button="@null"
                      android:background="@drawable/tab_three_selector"
                      android:layout_weight="1.0"
                      />
                  <RadioButton 
                      android:id="@+id/tab_four"
                      android:layout_width="0.0dp"
                      android:layout_height="wrap_content"
                      android:button="@null"
                      android:background="@drawable/tab_four_selector"
                      android:layout_weight="1.0"
                      />                  
              </RadioGroup>
          </LinearLayout>
      </TabHost>
       
   
    

</LinearLayout>
